[tool.poetry]
name = "data-structure"
version = "0.1.0"
description = ""
authors = ["AleksandrStrulkov <astrulkov@yandex.ru>"]
readme = "README.md"
packages = [{include = "data_structure"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
